<resources>
    <string name="app_name">Health App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="enter_height_field">Enter height</string>
    <string name="height_hint">Height [cm]</string>
    <string name="weightHint">Weight [kg]</string>
    <string name="enter_weight_field">Enter weight</string>
    <string name="bmi_calculator_button">BMI Calculator</string>
    <string name="bmiCalculatorCalculateButton">Calculate</string>
    <string name="backButtonText">Back</string>
    <string name="mainMenuCalorieCalculatorButton">Calorie Calculator</string>
    <string name="incorrectValueText">Values can\'t be zeroes</string>
    <string name="invalidInputText">Please enter correct values</string>
    <string name="calorie_calculator">Calorie calculator</string>
    <string name="radio_button_description_male">Male</string>
    <string name="radio_button_description_female">Female</string>
    <string name="calorie_calculator_gender_tip_text">Select your gender:</string>
    <string name="ageHint">Age [years]</string>
    <string name="enter_age_field">Enter age</string>
    <string name="quiz_button_text">Quiz</string>
    <string name="recipe_button_text">Recipe</string>
    <string name="chart_button_text">Chart</string>
    <string name="quiz_title_text">Quiz</string>
    <string name="next_button_text">Next</string>
    <string name="check_answers_button_text">Check answers</string>
</resources>
